--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -480,6 +480,8 @@
 			<integer>0</integer>
 			<key>DisplayLevel</key>
 			<integer>2147483650</integer>
+			<key>LogModules</key>
+			<string>*</string>
 			<key>SerialInit</key>
 			<false/>
 			<key>SysReport</key>
@@ -566,7 +568,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02653902J9J0PGCB</string>
+			<string>C02739600GUJ0PG1H</string>
 			<key>ProcessorType</key>
 			<integer>1541</integer>
 			<key>ROM</key>
@@ -578,9 +580,9 @@
 			<key>SystemProductName</key>
 			<string>iMac18,3</string>
 			<key>SystemSerialNumber</key>
-			<string>C02T106KJ1GJ</string>
+			<string>C02VG3ZBJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>2AF0E997-CA71-420B-AEE3-4EDB3095D474</string>
+			<string>AEF9E790-6468-4DC3-94B3-EC089D55CF20</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
@@ -599,7 +601,7 @@
 			<key>BoardProduct</key>
 			<string>Mac-BE088AF8C5EB4FA2</string>
 			<key>BoardSerialNumber</key>
-			<string>C02653902J9J0PGCB</string>
+			<string>C02739600GUJ0PG1H</string>
 			<key>BoardType</key>
 			<integer>10</integer>
 			<key>BoardVersion</key>
@@ -609,7 +611,7 @@
 			<key>ChassisManufacturer</key>
 			<string></string>
 			<key>ChassisSerialNumber</key>
-			<string>C02T106KJ1GJ</string>
+			<string>C02VG3ZBJ1GJ</string>
 			<key>ChassisType</key>
 			<integer>13</integer>
 			<key>ChassisVersion</key>
@@ -633,9 +635,9 @@
 			<key>SystemSKUNumber</key>
 			<string>System SKU#</string>
 			<key>SystemSerialNumber</key>
-			<string>C02T106KJ1GJ</string>
+			<string>C02VG3ZBJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>2AF0E997-CA71-420B-AEE3-4EDB3095D474</string>
+			<string>AEF9E790-6468-4DC3-94B3-EC089D55CF20</string>
 			<key>SystemVersion</key>
 			<string>1.0</string>
 		</dict>
