--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -84,7 +84,7 @@
 			<key>DisableSingleUser</key>
 			<false/>
 			<key>DisableVariableWrite</key>
-			<true/>
+			<false/>
 			<key>DiscardHibernateMap</key>
 			<false/>
 			<key>EnableSafeModeSlide</key>
@@ -606,7 +606,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>C027463014NJ0PGA8</string>
+			<string>C02731306J9J0PG1H</string>
 			<key>ProcessorType</key>
 			<integer>1541</integer>
 			<key>ROM</key>
@@ -618,9 +618,9 @@
 			<key>SystemProductName</key>
 			<string>iMac18,3</string>
 			<key>SystemSerialNumber</key>
-			<string>C02VPTYXJ1GJ</string>
+			<string>C02V52YEJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>F6D70850-90C9-4580-B218-A06E1F3278A4</string>
+			<string>492AAE4A-53CF-48EB-B816-1B12278DDE27</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
@@ -639,7 +639,7 @@
 			<key>BoardProduct</key>
 			<string>Mac-BE088AF8C5EB4FA2</string>
 			<key>BoardSerialNumber</key>
-			<string>C027463014NJ0PGA8</string>
+			<string>C02731306J9J0PG1H</string>
 			<key>BoardType</key>
 			<integer>10</integer>
 			<key>BoardVersion</key>
@@ -649,7 +649,7 @@
 			<key>ChassisManufacturer</key>
 			<string></string>
 			<key>ChassisSerialNumber</key>
-			<string>C02VPTYXJ1GJ</string>
+			<string>C02V52YEJ1GJ</string>
 			<key>ChassisType</key>
 			<integer>13</integer>
 			<key>ChassisVersion</key>
@@ -673,9 +673,9 @@
 			<key>SystemSKUNumber</key>
 			<string>System SKU#</string>
 			<key>SystemSerialNumber</key>
-			<string>C02VPTYXJ1GJ</string>
+			<string>C02V52YEJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>F6D70850-90C9-4580-B218-A06E1F3278A4</string>
+			<string>492AAE4A-53CF-48EB-B816-1B12278DDE27</string>
 			<key>SystemVersion</key>
 			<string>1.0</string>
 		</dict>
@@ -800,6 +800,30 @@
 				<false/>
 				<key>Path</key>
 				<string>OpenCanopy.efi</string>
+			</dict>
+			<dict>
+				<key>Arguments</key>
+				<string></string>
+				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>LoadEarly</key>
+				<false/>
+				<key>Path</key>
+				<string>ResetNvramEntry.efi</string>
+			</dict>
+			<dict>
+				<key>Arguments</key>
+				<string></string>
+				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>LoadEarly</key>
+				<false/>
+				<key>Path</key>
+				<string>ToggleSipEntry.efi</string>
 			</dict>
 		</array>
 		<key>Input</key>
